Docs: Use working directory in workflow to generate API reference

--- a/.github/workflows/generate-api-reference.yaml
+++ b/.github/workflows/generate-api-reference.yaml
@@ -12,9 +12,11 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Generate
-        run: cd scripts && ./generate-api-reference.js
+        working-directory: scripts
+        run: ./generate-api-reference.js
 
       - name: Commit
+        working-directory: scripts
         run: |
           git config --global user.email "bot@raycast.com"
           git config --global user.name "raycastbot"
