Docs: Enable manual workflow runs to sync API reference

--- a/.github/workflows/generate-api-reference.yaml
+++ b/.github/workflows/generate-api-reference.yaml
@@ -4,6 +4,7 @@ on:
     paths:
       - "docs/api-reference.json"
     branches: [main]
+  workflow_dispatch:
 jobs:
   generate-api-reference:
     runs-on: ubuntu-latest
