--- a/examples/todo-list/package.json
+++ b/examples/todo-list/package.json
@@ -23,6 +23,7 @@
     "@typescript-eslint/parser": "^4.28.5",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
+    "react-devtools": "^4.19.2",
     "typescript": "^4.3.5"
   },
   "scripts": {
