VS Code: Fix show in finder action

--- a/extensions/visual-studio-code-recent-projects/package.json
+++ b/extensions/visual-studio-code-recent-projects/package.json
@@ -33,7 +33,8 @@
     "eslint-config-prettier": "^7.1.0"
   },
   "dependencies": {
-    "@raycast/api": "^1.24.0"
+    "@raycast/api": "^1.24.0",
+    "tildify": "^3.0.0"
   },
   "scripts": {
     "dev": "ray develop",
