--- a/examples/api-examples/package.json
+++ b/examples/api-examples/package.json
@@ -142,19 +142,19 @@
       "mode": "view"
     }
   ],
+  "dependencies": {
+    "@raycast/api": "^1.25.0",
+    "node-fetch": "^3.0.0",
+    "open": "^8.3.0"
+  },
   "devDependencies": {
-    "@types/node": "16.10.0",
+    "@types/node": "~16.10.0",
     "@types/react": "^17.0.28",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "typescript": "^4.4.3"
-  },
-  "dependencies": {
-    "@raycast/api": "^1.25.0",
-    "node-fetch": "^3.0.0",
-    "open": "^8.3.0"
   },
   "scripts": {
     "dev": "ray develop",
