--- a/extensions/spotify-controls/package.json
+++ b/extensions/spotify-controls/package.json
@@ -42,17 +42,17 @@
     }
   ],
   "dependencies": {
-    "@raycast/api": "^1.24.3",
+    "@raycast/api": "^1.25.0",
     "run-applescript": "^6.0.0"
   },
   "devDependencies": {
-    "@types/node": "^16.4.3",
-    "@types/react": "^17.0.15",
-    "@typescript-eslint/eslint-plugin": "^4.28.5",
-    "@typescript-eslint/parser": "^4.28.5",
+    "@types/node": "~16.10.0",
+    "@types/react": "^17.0.28",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
-    "typescript": "^4.3.5"
+    "typescript": "^4.4.3"
   },
   "scripts": {
     "build": "ray build -e dist",
