Add home assistant 1.1.0 (#30)
* add Home Assistant 1.1.0

* move state component

* add Search Entity Attributes root command

* add heat_cool mode support

* rename command

* update states after action

--- a/extensions/homeassistant/package.json
+++ b/extensions/homeassistant/package.json
@@ -1,7 +1,7 @@
 {
   "name": "homeassistant",
   "title": "Home Assistant",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "author": "tonka3000",
   "license": "MIT",
   "description": "Home Assistant remote control. Control your house with Raycast 🚀",
@@ -76,6 +76,13 @@
       "subtitle" : "Home Assistant",
       "description": "Get/Set states of Home Assistant climate entities",
       "mode": "view"
+    },
+    {
+      "name": "attributes",
+      "title": "All Entity Attributes",
+      "subtitle" : "Home Assistant",
+      "description": "Query Home Assistant entity attributes",
+      "mode": "view"
     }
   ],
   "preferences": [
@@ -97,7 +104,7 @@
     }
   ],
   "dependencies": {
-    "@raycast/api": "^1.24.5",
+    "@raycast/api": "^1.25.0",
     "node-fetch": "^2.6.1",
     "url-join": "^4.0.1"
   },
