--- a/extensions/producthunt/package.json
+++ b/extensions/producthunt/package.json
@@ -3,7 +3,7 @@
   "title": "Product Hunt - Today's Hunts",
   "description": "Get the latest products from the fontpage of Product Hunt.",
   "icon": "icon.png",
-  "author": "Ragnor Comerford",
+  "author": "ragnor",
   "commands": [
     {
       "name": "frontpage",
