make entity states real-time (#49)

--- a/extensions/homeassistant/package.json
+++ b/extensions/homeassistant/package.json
@@ -1,7 +1,7 @@
 {
   "name": "homeassistant",
   "title": "Home Assistant",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "author": "tonka3000",
   "license": "MIT",
   "description": "Home Assistant remote control. Control your house with Raycast 🚀",
@@ -10,77 +10,77 @@
     {
       "name": "index",
       "title": "All Entities",
-      "subtitle" : "Home Assistant",
+      "subtitle": "Home Assistant",
       "description": "Get/Set states of Home Assistant entities",
       "mode": "view"
     },
     {
       "name": "covers",
       "title": "Covers",
-      "subtitle" : "Home Assistant",
+      "subtitle": "Home Assistant",
       "description": "Get/Set states of Home Assistant covers",
       "mode": "view"
     },
     {
       "name": "lights",
       "title": "Lights",
-      "subtitle" : "Home Assistant",
+      "subtitle": "Home Assistant",
       "description": "Get/Set states of Home Assistant lights",
       "mode": "view"
     },
     {
       "name": "persons",
       "title": "Persons",
-      "subtitle" : "Home Assistant",
+      "subtitle": "Home Assistant",
       "description": "Get/Set states of Home Assistant persons",
       "mode": "view"
     },
     {
       "name": "sensors",
       "title": "Sensors",
-      "subtitle" : "Home Assistant",
+      "subtitle": "Home Assistant",
       "description": "Get/Set states of Home Assistant sensors",
       "mode": "view"
     },
     {
       "name": "binarysensors",
       "title": "Binary Sensors",
-      "subtitle" : "Home Assistant",
+      "subtitle": "Home Assistant",
       "description": "Get/Set states of Home Assistant binary sensors",
       "mode": "view"
     },
     {
       "name": "mediaplayers",
       "title": "Mediaplayers",
-      "subtitle" : "Home Assistant",
+      "subtitle": "Home Assistant",
       "description": "Get/Set states of Home Assistant mediaplayers",
       "mode": "view"
     },
     {
       "name": "automations",
       "title": "Automations",
-      "subtitle" : "Home Assistant",
+      "subtitle": "Home Assistant",
       "description": "Home Assistant automations",
       "mode": "view"
     },
     {
       "name": "dashboard",
       "title": "Dashboard",
-      "subtitle" : "Home Assistant",
+      "subtitle": "Home Assistant",
       "description": "Open Home Assistant dashboard",
-      "mode": "view"
+      "mode": "no-view"
     },
     {
       "name": "climate",
       "title": "Climate",
-      "subtitle" : "Home Assistant",
+      "subtitle": "Home Assistant",
       "description": "Get/Set states of Home Assistant climate entities",
       "mode": "view"
     },
     {
       "name": "attributes",
-      "title": "All Entity Attributes",
-      "subtitle" : "Home Assistant",
+      "title": "All Entities with Attributes",
+      "subtitle": "Home Assistant",
       "description": "Query Home Assistant entity attributes",
       "mode": "view"
     }
@@ -99,12 +99,13 @@
       "type": "password",
       "required": true,
       "title": "API Token",
-      "description": "Your Home Assistant API token",
-      "placeholder": "Enter your Home Assistant API token"
+      "description": "Your Home Assistant long-lived access token",
+      "placeholder": "Enter your Home Assistant long-lived access token"
     }
   ],
   "dependencies": {
     "@raycast/api": "^1.25.0",
+    "home-assistant-js-websocket": "^5.11.1",
     "node-fetch": "^2.6.1",
     "url-join": "^4.0.1"
   },
