Update Xcode Extension | Create Swift Playground (#63)
* Added xcode-projects Extension

* Updated command name to xcode projects

* Refactored command-icon to icon

* Updated wording

* Updated SearchBar Placeholder

* Added support for Swift Playgrounds

* Added accessory title to List Item

* Merged XcodeProjects loading in just one useEffect execution

* Renamed xcode-projects extension to xcode and added releases command

* Added async version of exec

* Added Simulators command

Allowing to boot and shutdown Xcode Simulators

* Wrap XcodeSimulatorService in state instead of global const

* Added documentation

* Added Xcode Simulator Icon

* Addded Apps command

* Added check if Cache is not empty

* On error set empty applications

* Retrieve Bundle Identifier from Info.plist instead of retrieving it async via defaults read

* Refactored push action to initialize component only when needed

* Fixed Navigation bug

By method injecting the Navigation to the components

* Added main extension icon

* Added keywords

* Updated icon to proper size 512x512 according to review guidelines

* Added Create Swift Package Command

* Set empty XcodeReleases on error in case no previous releases are available

* Set empty XcodeProjects in case of an error if no previous projects are available

* Send empty array of XcodeSimulators in case of an error

* Added Clear Derived Data command

* Updated command order

* Removed trailing slash

* Log error

* Added Clear SPM cache command

* Updated naming convention for commands

* Moved models in distinct child directories and updated import paths

Improves the overview of the models

* Added tildify dependency

* tildify Xcode project path

* Updated title and subtitle of commands according to suggestions and guidelines

* Fixed author name with raycast username

* Updated description

* Added Create Swift Playground command

* Bumped version 

--- a/extensions/xcode/package.json
+++ b/extensions/xcode/package.json
@@ -1,7 +1,7 @@
 {
   "name": "xcode",
   "title": "Xcode",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "author": "SvenTiigi",
   "license": "MIT",
   "description": "Search and open your recent Xcode Projects, manage your Simulators & Apps, view the latest Releases and quickly clear Xcode cache files.",
@@ -43,6 +43,13 @@
       "mode": "view"
     },
     {
+      "name": "create-swift-playground.command",
+      "title": "Create Swift Playground",
+      "subtitle": "Xcode",
+      "description": "Create a new Swift Playground and open it directly in Xcode",
+      "mode": "view"
+    },
+    {
       "name": "clear-derived-data.command",
       "title": "Clear Derived Data",
       "subtitle": "Xcode",
@@ -66,11 +73,13 @@
   ],
   "dependencies": {
     "@raycast/api": "^1.25.0",
+    "dedent": "^0.7.0",
     "node-fetch": "^3.0.0",
     "rxjs": "^7.4.0",
     "tildify": "^3.0.0"
   },
   "devDependencies": {
+    "@types/dedent": "^0.7.0",
     "@types/node": "~16.10.0",
     "@types/node-fetch": "^3.0.3",
     "@types/react": "^17.0.28",
