--- a/extensions/vercast/package.json
+++ b/extensions/vercast/package.json
@@ -4,7 +4,7 @@
   "description": "View your Vercel deployments",
   "icon": "icon.png",
   "author": "matt",
-  "license": "MPL-2.0",
+  "license": "MIT",
   "commands": [
     {
       "name": "index",
