--- a/extensions/consoledev/package.json
+++ b/extensions/consoledev/package.json
@@ -16,7 +16,7 @@
     {
       "name": "betas_list",
       "title": "Betas List",
-      "subtitle": "Beta Console Dev",
+      "subtitle": "Console Dev",
       "description": "Each week Console reviews the best tools for developers.",
       "mode": "view"
     },
