Updated Xcode Extension 1.2.0 | Added "Search Developer Documentation" command (#121)
* Added xcode-projects Extension

* Updated command name to xcode projects

* Refactored command-icon to icon

* Updated wording

* Updated SearchBar Placeholder

* Added support for Swift Playgrounds

* Added accessory title to List Item

* Merged XcodeProjects loading in just one useEffect execution

* Renamed xcode-projects extension to xcode and added releases command

* Added async version of exec

* Added Simulators command

Allowing to boot and shutdown Xcode Simulators

* Wrap XcodeSimulatorService in state instead of global const

* Added documentation

* Added Xcode Simulator Icon

* Addded Apps command

* Added check if Cache is not empty

* On error set empty applications

* Retrieve Bundle Identifier from Info.plist instead of retrieving it async via defaults read

* Refactored push action to initialize component only when needed

* Fixed Navigation bug

By method injecting the Navigation to the components

* Added main extension icon

* Added keywords

* Updated icon to proper size 512x512 according to review guidelines

* Added Create Swift Package Command

* Set empty XcodeReleases on error in case no previous releases are available

* Set empty XcodeProjects in case of an error if no previous projects are available

* Send empty array of XcodeSimulators in case of an error

* Added Clear Derived Data command

* Updated command order

* Removed trailing slash

* Log error

* Added Clear SPM cache command

* Updated naming convention for commands

* Moved models in distinct child directories and updated import paths

Improves the overview of the models

* Added tildify dependency

* tildify Xcode project path

* Updated title and subtitle of commands according to suggestions and guidelines

* Fixed author name with raycast username

* Updated description

* Added Create Swift Playgrou

--- a/extensions/xcode/package.json
+++ b/extensions/xcode/package.json
@@ -1,10 +1,10 @@
 {
   "name": "xcode",
   "title": "Xcode",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "author": "SvenTiigi",
   "license": "MIT",
-  "description": "Search and open your recent Xcode Projects, manage your Simulators & Apps, view the latest Releases and quickly clear Xcode cache files.",
+  "description": "Search and open your recent Xcode Projects, manage your Simulators & Apps, view the latest Releases, search the Apple Developer Documentation and quickly clear Xcode cache files.",
   "icon": "icon.png",
   "commands": [
     {
@@ -33,6 +33,13 @@
       "title": "Xcode Releases",
       "subtitle": "Xcode",
       "description": "Search, download and view the latest Xcode Releases",
+      "mode": "view"
+    },
+    {
+      "name": "search-apple-developer-documentation.command",
+      "title": "Search Developer Documentation",
+      "subtitle": "Xcode",
+      "description": "Search in Apple Developer Documentation",
       "mode": "view"
     },
     {
@@ -69,7 +76,9 @@
     "Simulator",
     "Swift",
     "Swift Package",
-    "SPM"
+    "SPM",
+    "Apple",
+    "Apple Developer"
   ],
   "dependencies": {
     "@raycast/api": "^1.25.0",
