add 'caffeinate while' feature (#177)
Signed-off-by: Max Schmidt <max.schmidt@outlook.de>

--- a/extensions/coffee/package.json
+++ b/extensions/coffee/package.json
@@ -19,6 +19,13 @@
       "subtitle": "Coffee",
       "description": "Turn off the caffeine",
       "mode": "no-view"
+    },
+    {
+      "name": "caffeinateWhile",
+      "title": "Caffeinate while",
+      "subtitle": "Coffee",
+      "description": "Prevent your Mac from going to sleep mode while that particular app is running",
+      "mode": "view"
     }
   ],
   "dependencies": {
