Kill Process extension: Fix checkbox preference labels (#224)

--- a/extensions/kill-process/package.json
+++ b/extensions/kill-process/package.json
@@ -37,14 +37,16 @@
       "name": "shouldSearchInPaths",
       "type": "checkbox",
       "required": true,
-      "title": "Filtering should search process paths",
+      "title": "",
+      "label": "Filtering should search process paths",
       "description": "Some processes are named differently than the app itself. This flag determines whether the path of the process should be searched for the query, or only the process name."
     },
     {
       "name": "shouldPrioritizeAppsWhenFiltering",
       "type": "checkbox",
       "required": true,
-      "title": "Prioritize apps when filtering",
+      "title": "",
+      "label": "Prioritize apps when filtering",
       "description": "Determines whether apps are listed before other results when filtering."
     }
   ]
