--- a/extensions/kill-process/package.json
+++ b/extensions/kill-process/package.json
@@ -36,7 +36,7 @@
     {
       "name": "shouldSearchInPaths",
       "type": "checkbox",
-      "required": true,
+      "required": false,
       "title": "",
       "label": "Filtering should search process paths",
       "description": "Some processes are named differently than the app itself. This flag determines whether the path of the process should be searched for the query, or only the process name."
@@ -44,7 +44,7 @@
     {
       "name": "shouldPrioritizeAppsWhenFiltering",
       "type": "checkbox",
-      "required": true,
+      "required": false,
       "title": "",
       "label": "Prioritize apps when filtering",
       "description": "Determines whether apps are listed before other results when filtering."
