Brew: Improvements to render performance
- Remove un-necessary 'render' function call
- Move custom components out of main component
- Merge component state

--- a/extensions/brew/package.json
+++ b/extensions/brew/package.json
@@ -15,9 +15,9 @@
     },
     {
       "name": "search",
-      "title": "Search Formula",
+      "title": "Search Formulae",
       "subtitle": "Brew",
-      "description": "Search brew formula",
+      "description": "Search brew formulae",
       "mode": "view"
     },
     {
