add command "Caffeination status" to Coffee (#240)
* add 'caffeinate while' feature

Signed-off-by: Max Schmidt <max.schmidt@outlook.de>

* better description for 'caffeinate while'

Signed-off-by: Max Schmidt <max.schmidt@outlook.de>

* fix caffeination when pid is not given

Signed-off-by: Max Schmidt <max.schmidt@outlook.de>

* better naming

Signed-off-by: Max Schmidt <max.schmidt@outlook.de>

* Update extensions/coffee/package.json

* Update extensions/coffee/package.json

Co-authored-by: mattisssa <kolevanartem@gmail.com>

--- a/extensions/coffee/package.json
+++ b/extensions/coffee/package.json
@@ -22,10 +22,17 @@
     },
     {
       "name": "caffeinateWhile",
-      "title": "Caffeinate while",
+      "title": "Caffeinate While",
       "subtitle": "Coffee",
-      "description": "Prevent your Mac from going to sleep mode while that particular app is running",
+      "description": "Prevent your Mac from sleeping while an certain app is running",
       "mode": "view"
+    },
+    {
+      "name": "caffeinationStatus",
+      "title": "Caffeination Status",
+      "subtitle": "Coffee",
+      "description": "Get the status of the current caffeination",
+      "mode": "no-view"
     }
   ],
   "dependencies": {
