--- a/extensions/google-chrome/package.json
+++ b/extensions/google-chrome/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "google-chrome-go-to-tab",
-  "title": "Google Chrome Tab Search",
-  "description": "Search and open tabs in Google Chrome.",
+  "name": "google-chrome",
+  "title": "Google Chrome",
+  "description": "Search and open tabs and history in Google Chrome.",
   "icon": "google_chrome-icon.png",
   "author": "Codely",
+  "contributors": ["bromanko"],
   "license": "MIT",
   "commands": [
     {
@@ -11,6 +12,13 @@
       "title": "Search Tabs",
       "subtitle": "Google Chrome",
       "description": "List all tabs and go to the selected.",
+      "mode": "view"
+    },
+    {
+      "name": "google-chrome-search-history",
+      "title": "Search History",
+      "subtitle": "Google Chrome",
+      "description": "Search browser history.",
       "mode": "view"
     }
   ],
@@ -26,11 +34,13 @@
   ],
   "dependencies": {
     "@raycast/api": "^1.25.0",
-    "run-applescript": "^6.0.0"
+    "run-applescript": "^6.0.0",
+    "sql.js": "^1.6.2"
   },
   "devDependencies": {
     "@types/node": "~16.10.0",
     "@types/react": "^17.0.28",
+    "@types/sql.js": "^1.4.3",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^7.32.0",
