Kill process improvements (#231)
* Kill Process: default values to preferences

* Improved CPU label

* Added reload action

* Kill Process: preferences to hide some information

* Kill Process: improved some labels and preferences

* Kill Process: improved some labels and preferences

* Kill Process: improved labels and preferences

* Kill Process: fixed shouldPrioritizeAppsWhenFiltering logic

--- a/extensions/kill-process/package.json
+++ b/extensions/kill-process/package.json
@@ -39,7 +39,7 @@
       "required": false,
       "title": "",
       "label": "Filtering should search process paths",
-      "description": "Some processes are named differently than the app itself. This flag determines whether the path of the process should be searched for the query, or only the process name."
+      "description": "Some processes are named differently than the app itself. This flag determines whether\nthe path of the process should be searched for the query, or only the process name."
     },
     {
       "name": "shouldPrioritizeAppsWhenFiltering",
@@ -48,6 +48,14 @@
       "title": "",
       "label": "Prioritize apps when filtering",
       "description": "Determines whether apps are listed before other results when filtering."
+    },
+    {
+      "name": "shouldShowPID",
+      "type": "checkbox",
+      "required": false,
+      "title": "",
+      "label": "Show PID",
+      "description": "Show process PID info."
     }
   ]
 }
