More actions for Bear extension (#251)
* Add Note Links/Backlink Feature

* Add icons and shortcuts to actions

* Place in caret in note after opening it

Saves you a key press ...

* Add open in new window action

* Refactor note actions to standalone file

* Add actions and navigation title to note preview

* Improve tag and title formatting

Untitled notes are now called untitled notes, subtags aren't displayed by themselves and tags with spaces in them wrapped in #

* Add clickable file links in preview

* Added Commonmark

* Added separators in ActionPanel and copy actions

* Added ability to search a note by id

* Added list of added features

* Fix typo

* Added open dependency

* Added more actions and did some formatting

- Grab URL action to save text from the web
- Copy link to note action
- Copy unique identifier of note
- Add text to note action

* Add create new note action

* Added create note command

* Remove "key" warning

* Add "Web Capture" command

* Add Note Links/Backlink Feature

* Add icons and shortcuts to actions

* Place in caret in note after opening it

Saves you a key press ...

* Add open in new window action

* Refactor note actions to standalone file

* Add actions and navigation title to note preview

* Improve tag and title formatting

Untitled notes are now called untitled notes, subtags aren't displayed by themselves and tags with spaces in them wrapped in #

* Add clickable file links in preview

* Added Commonmark

* Added separators in ActionPanel and copy actions

* Added ability to search a note by id

* Added list of added features

* Fix typo

* Added open dependency

* Added more actions and did some formatting

- Grab URL action to save text from the web
- Copy link to note action
- Copy unique identifier of note
- Add text to note action

* Add create new note action

* Added create note command

* Remove "key" warning

* Add "W

--- a/extensions/bear/package.json
+++ b/extensions/bear/package.json
@@ -12,11 +12,28 @@
       "subtitle": "Bear",
       "description": "Search and open Bear notes",
       "mode": "view"
+    },
+    {
+      "name": "new-note",
+      "title": "Create Note",
+      "subtitle": "Bear",
+      "description": "Create a new bear note",
+      "mode": "view"
+    },
+    {
+      "name": "grab-url",
+      "title": "Web Capture",
+      "subtitle": "Bear",
+      "description": "Create a new bear note from a web capture",
+      "mode": "view"
     }
   ],
   "dependencies": {
     "@raycast/api": "^1.25.1",
+    "@types/commonmark": "^0.27.5",
+    "commonmark": "^0.30.0",
     "date-fns": "^2.25.0",
+    "open": "^8.4.0",
     "sql.js": "^1.6.2"
   },
   "devDependencies": {
